--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
     "@capacitor/ios": "4.1.0",
     "@capacitor/keyboard": "4.0.1",
     "@capacitor/status-bar": "4.0.1",
-    "@ionic/angular": "^6.1.9",
+    "@ionic/angular": "^7.0.0-rc.0",
     "ionicons": "^6.0.3",
-    "rxjs": "~6.6.0",
+    "rxjs": "^7.8.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
