--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@capacitor/keyboard": "4.0.1",
     "@capacitor/status-bar": "4.0.1",
     "@ionic/angular": "^7.0.0-rc.0",
+    "date-fns": "^2.29.3",
     "ionicons": "^6.0.3",
     "rxjs": "^7.8.0",
     "tslib": "^2.2.0",
