--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@ionic/angular": "^7.0.0-rc.0",
     "date-fns": "^2.29.3",
     "ionicons": "^6.0.3",
+    "rxdb": "^14.6.0",
     "rxjs": "^7.8.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
