--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "ionicons": "^6.0.3",
     "rxdb": "^14.6.0",
     "rxjs": "^7.8.0",
+    "swiper": "^9.2.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
