--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@capacitor/ios": "4.1.0",
     "@capacitor/keyboard": "4.0.1",
     "@capacitor/status-bar": "4.0.1",
-    "@ionic/angular": "^7.0.0-rc.0",
+    "@ionic/angular": "^7.0.0",
     "date-fns": "^2.29.3",
     "ionicons": "^6.0.3",
     "rxdb": "^14.6.0",
@@ -41,7 +41,7 @@
     "@angular-eslint/eslint-plugin": "~13.0.1",
     "@angular-eslint/eslint-plugin-template": "~13.0.1",
     "@angular-eslint/template-parser": "~13.0.1",
-    "@angular/cli": "^15.2.1",
+    "@angular/cli": "^16.0.0-next.6",
     "@angular/compiler": "^15.2.1",
     "@angular/compiler-cli": "^15.2.1",
     "@angular/language-service": "^15.2.1",
