turned form controls and groups to observables

--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "@capacitor/keyboard": "4.0.1",
     "@capacitor/status-bar": "4.0.1",
     "@ionic/angular": "^7.0.0",
+    "@ngrx/effects": "^15.4.0",
+    "@ngrx/store": "^15.4.0",
+    "cropperjs": "^1.5.13",
     "date-fns": "^2.29.3",
     "ionicons": "^6.0.3",
     "rxdb": "^14.6.0",
