--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@capacitor/keyboard": "4.0.1",
     "@capacitor/status-bar": "4.0.1",
     "@ionic/angular": "^7.0.0",
+    "@ionic/core": "^7.0.7",
     "@ngrx/effects": "^16.0.0",
     "@ngrx/store": "^16.0.0",
     "cropperjs": "^1.5.13",
