--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "cropperjs": "^1.5.13",
     "date-fns": "^2.29.3",
     "ionicons": "^6.0.3",
+    "lodash": "^4.17.21",
     "rxdb": "^14.6.0",
     "rxjs": "^7.8.0",
     "swiper": "^9.2.0",
