--- a/package.json
+++ b/package.json
@@ -19,19 +19,23 @@
     "@angular/platform-browser": "^16.0.2",
     "@angular/platform-browser-dynamic": "^16.0.2",
     "@angular/router": "^16.0.2",
-    "@capacitor/android": "4.1.0",
-    "@capacitor/app": "4.0.1",
-    "@capacitor/core": "4.1.0",
-    "@capacitor/haptics": "4.0.1",
-    "@capacitor/ios": "4.1.0",
-    "@capacitor/keyboard": "4.0.1",
-    "@capacitor/status-bar": "4.0.1",
+    "@awesome-cordova-plugins/network": "^6.4.0",
+    "@capacitor/android": "^5.0.0",
+    "@capacitor/app": "^5.0.0",
+    "@capacitor/core": "^5.0.0",
+    "@capacitor/haptics": "^5.0.0",
+    "@capacitor/ios": "^5.0.0",
+    "@capacitor/keyboard": "^5.0.0",
+    "@capacitor/network": "^5.0.6",
+    "@capacitor/status-bar": "^5.0.0",
     "@ionic/angular": "^7.2.0",
     "@ionic/core": "^7.0.7",
+    "@ionic/storage-angular": "^4.0.0",
     "@ngrx/effects": "^16.0.0",
     "@ngrx/store": "^16.0.0",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
+    "cordova-plugin-network-information": "^3.0.0",
     "cropperjs": "^1.5.13",
     "date-fns": "^2.29.3",
     "ionicons": "^6.0.3",
@@ -52,7 +56,7 @@
     "@angular/compiler": "^16.0.2",
     "@angular/compiler-cli": "^16.0.2",
     "@angular/language-service": "^16.0.2",
-    "@capacitor/cli": "4.1.0",
+    "@capacitor/cli": "^5.0.0",
     "@ionic/angular-toolkit": "^6.0.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
