--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "test": "ng test",
+    "test": "jest --verbose",
+    "test:coverage": "jest --coverage",
+    "test:watch": "jest --watch",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
+    "-": "^0.0.1",
     "@angular/common": "^16.0.2",
     "@angular/core": "^16.0.2",
     "@angular/forms": "^16.0.2",
@@ -35,13 +38,17 @@
     "@ngrx/store": "^16.0.0",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
+    "@types/jest": "^29.5.5",
     "cordova-plugin-network-information": "^3.0.0",
     "cropperjs": "^1.5.13",
     "date-fns": "^2.29.3",
     "ionicons": "^6.0.3",
+    "jest": "^29.7.0",
+    "jest-preset-angular": "^13.1.2",
     "lodash": "^4.17.21",
     "rxdb": "^14.17.0",
     "rxjs": "^7.8.1",
+    "save-dev": "^0.0.1-security",
     "swiper": "^9.2.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.13.0"
