--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@capacitor/app": "^5.0.0",
     "@capacitor/core": "^5.0.0",
     "@capacitor/haptics": "^5.0.0",
-    "@capacitor/ios": "^5.0.0",
+    "@capacitor/ios": "5.2.2",
     "@capacitor/keyboard": "^5.0.0",
     "@capacitor/network": "^5.0.6",
     "@capacitor/status-bar": "^5.0.0",
