--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@capacitor/ios": "5.2.2",
     "@capacitor/keyboard": "^5.0.0",
     "@capacitor/network": "^5.0.6",
+    "@capacitor/splash-screen": "^5.0.6",
     "@capacitor/status-bar": "^5.0.0",
     "@ionic/angular": "^7.6.2",
     "@ionic/core": "^7.0.7",
