--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@capacitor/ios": "5.2.2",
     "@capacitor/keyboard": "^5.0.0",
     "@capacitor/network": "^5.0.6",
-    "@capacitor/splash-screen": "^5.0.6",
+    "@capacitor/splash-screen": "^5.0.7",
     "@capacitor/status-bar": "^5.0.0",
     "@ionic/angular": "^7.6.2",
     "@ionic/core": "^7.0.7",
@@ -63,6 +63,7 @@
     "@angular/compiler": "^17.0.8",
     "@angular/compiler-cli": "^17.0.8",
     "@angular/language-service": "^17.0.8",
+    "@capacitor/assets": "^3.0.4",
     "@capacitor/cli": "^5.0.0",
     "@ionic/angular-toolkit": "^6.0.0",
     "@types/jasmine": "~3.6.0",
