adds in app browser and terms and conditions component

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "^17.0.8",
     "@angular/platform-browser-dynamic": "^17.0.8",
     "@angular/router": "^17.0.8",
+    "@awesome-cordova-plugins/in-app-browser": "^6.6.0",
     "@awesome-cordova-plugins/network": "^6.4.0",
     "@babel/polyfill": "^7.12.1",
     "@capacitor/android": "^5.0.0",
@@ -40,6 +41,7 @@
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
     "@types/jest": "^29.5.5",
+    "cordova-plugin-inappbrowser": "^6.0.0",
     "cordova-plugin-network-information": "^3.0.0",
     "cropperjs": "^1.5.13",
     "date-fns": "^2.29.3",
