--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
     "@angular/platform-browser": "^17.0.8",
     "@angular/platform-browser-dynamic": "^17.0.8",
     "@angular/router": "^17.0.8",
-    "@awesome-cordova-plugins/in-app-browser": "^6.6.0",
     "@awesome-cordova-plugins/network": "^6.4.0",
     "@babel/polyfill": "^7.12.1",
     "@capacitor/android": "^5.0.0",
     "@capacitor/app": "^5.0.0",
+    "@capacitor/browser": "^5.2.0",
     "@capacitor/core": "^5.0.0",
     "@capacitor/haptics": "^5.0.0",
     "@capacitor/ios": "5.2.2",
@@ -35,13 +35,12 @@
     "@capacitor/network": "^5.0.6",
     "@capacitor/splash-screen": "^5.0.7",
     "@capacitor/status-bar": "^5.0.0",
-    "@ionic/angular": "^7.6.2",
+    "@ionic/angular": "^7.7.0",
     "@ionic/core": "^7.0.7",
     "@ionic/storage-angular": "^4.0.0",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
     "@types/jest": "^29.5.5",
-    "cordova-plugin-inappbrowser": "^6.0.0",
     "cordova-plugin-network-information": "^3.0.0",
     "cropperjs": "^1.5.13",
     "date-fns": "^2.29.3",
