--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "^17.0.8",
     "@angular/platform-browser-dynamic": "^17.0.8",
     "@angular/router": "^17.0.8",
+    "@awesome-cordova-plugins/mobile-accessibility": "^6.6.0",
     "@awesome-cordova-plugins/network": "^6.4.0",
     "@babel/polyfill": "^7.12.1",
     "@capacitor/android": "^5.0.0",
@@ -38,6 +39,8 @@
     "@ionic/angular": "^7.7.0",
     "@ionic/core": "^7.0.7",
     "@ionic/storage-angular": "^4.0.0",
+    "@maskito/angular": "^2.2.0",
+    "@maskito/core": "^2.2.0",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
     "@types/jest": "^29.5.5",
