--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@angular/platform-browser": "^17.0.8",
     "@angular/platform-browser-dynamic": "^17.0.8",
     "@angular/router": "^17.0.8",
-    "@awesome-cordova-plugins/mobile-accessibility": "^6.6.0",
+    "@awesome-cordova-plugins/core": "^6.6.0",
     "@awesome-cordova-plugins/network": "^6.4.0",
     "@babel/polyfill": "^7.12.1",
     "@capacitor/android": "^5.0.0",
@@ -36,6 +36,7 @@
     "@capacitor/network": "^5.0.6",
     "@capacitor/splash-screen": "^5.0.7",
     "@capacitor/status-bar": "^5.0.0",
+    "@capacitor/text-zoom": "^5.0.7",
     "@ionic/angular": "^7.7.0",
     "@ionic/core": "^7.0.7",
     "@ionic/storage-angular": "^4.0.0",
