--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@capacitor/splash-screen": "^5.0.7",
     "@capacitor/status-bar": "^5.0.0",
     "@capacitor/text-zoom": "^5.0.7",
-    "@ionic/angular": "^7.7.0",
+    "@ionic/angular": "^8.0.0-rc.2",
     "@ionic/core": "^7.0.7",
     "@ionic/storage-angular": "^4.0.0",
     "@maskito/angular": "^2.2.0",
