--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "private": true,
   "dependencies": {
+    "rxdb-old": "npm:rxdb@14.17.1",
     "-": "^0.0.1",
     "@angular/common": "^17.3.6",
     "@angular/core": "^17.3.6",
@@ -52,7 +53,7 @@
     "jest": "^29.7.0",
     "jest-preset-angular": "^13.1.3",
     "lodash": "^4.17.21",
-    "rxdb": "^14.17.1",
+    "rxdb": "^15.18.4",
     "rxjs": "^7.8.1",
     "save-dev": "^0.0.1-security",
     "swiper": "^11.0.5",
