--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "test:watch": "jest --watch",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "ionic-run-ios":"ionic build --prod && ionic cap sync ios && ionic cap run ios -l --external",
-    "ionic-run-android":"ionic build --prod && ionic cap sync android && ionic cap run android -l --external"
+    "ionic-run-ios": "ionic build --prod && ionic cap sync ios && ionic cap run ios -l --external",
+    "ionic-run-android": "ionic build --prod && ionic cap sync android && ionic cap run android -l --external"
   },
   "private": true,
   "dependencies": {
@@ -29,17 +29,17 @@
     "@awesome-cordova-plugins/core": "^6.6.0",
     "@awesome-cordova-plugins/network": "^6.4.0",
     "@babel/polyfill": "^7.12.1",
-    "@capacitor/android": "^5.0.0",
-    "@capacitor/app": "^5.0.0",
-    "@capacitor/browser": "^5.2.0",
-    "@capacitor/core": "^5.0.0",
-    "@capacitor/haptics": "^5.0.0",
-    "@capacitor/ios": "5.2.2",
-    "@capacitor/keyboard": "^5.0.0",
-    "@capacitor/network": "^5.0.6",
-    "@capacitor/splash-screen": "^5.0.7",
-    "@capacitor/status-bar": "^5.0.0",
-    "@capacitor/text-zoom": "^5.0.7",
+    "@capacitor/android": "^6.0.0",
+    "@capacitor/app": "^6.0.0",
+    "@capacitor/browser": "^6.0.0",
+    "@capacitor/core": "^6.0.0",
+    "@capacitor/haptics": "^6.0.0",
+    "@capacitor/ios": "^6.0.0",
+    "@capacitor/keyboard": "^6.0.0",
+    "@capacitor/network": "^6.0.0",
+    "@capacitor/splash-screen": "^6.0.0",
+    "@capacitor/status-bar": "^6.0.0",
+    "@capacitor/text-zoom": "^6.0.0",
     "@ionic/angular": "^8.0.0-rc.2",
     "@ionic/core": "^8.0.1",
     "@ionic/storage-angular": "^4.0.0",
@@ -73,7 +73,7 @@
     "@angular/compiler-cli": "^17.3.6",
     "@angular/language-service": "^17.3.6",
     "@capacitor/assets": "^3.0.4",
-    "@capacitor/cli": "^5.0.0",
+    "@capacitor/cli": "^6.0.0",
     "@ionic/angular-toolkit": "^6.1.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
