--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,7 +16,8 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [18.16.0]
+        # node-version: [18.16.0]
+        node-version: [20.0.0]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
