--- a/package.json
+++ b/package.json
@@ -19,80 +19,80 @@
   "private": true,
   "dependencies": {
     "-": "^0.0.1",
-    "@angular/common": "^19.0.1",
-    "@angular/core": "^19.0.1",
-    "@angular/forms": "^19.0.1",
-    "@angular/platform-browser": "^19.0.1",
-    "@angular/platform-browser-dynamic": "^19.0.1",
-    "@angular/router": "^19.0.1",
-    "@awesome-cordova-plugins/core": "^6.6.0",
-    "@awesome-cordova-plugins/network": "^6.4.0",
+    "@angular/common": "^19.0.5",
+    "@angular/core": "^19.0.5",
+    "@angular/forms": "^19.0.5",
+    "@angular/platform-browser": "^19.0.5",
+    "@angular/platform-browser-dynamic": "^19.0.5",
+    "@angular/router": "^19.0.5",
+    "@awesome-cordova-plugins/core": "^6.13.0",
+    "@awesome-cordova-plugins/network": "^6.13.0",
     "@babel/polyfill": "^7.12.1",
-    "@capacitor/android": "^6.0.0",
-    "@capacitor/app": "^6.0.0",
-    "@capacitor/browser": "^6.0.0",
-    "@capacitor/core": "^6.0.0",
-    "@capacitor/haptics": "^6.0.0",
-    "@capacitor/ios": "^6.0.0",
-    "@capacitor/keyboard": "^6.0.0",
-    "@capacitor/network": "^6.0.0",
-    "@capacitor/splash-screen": "^6.0.0",
-    "@capacitor/status-bar": "^6.0.0",
-    "@capacitor/text-zoom": "^6.0.0",
-    "@ionic/angular": "^8.0.0-rc.2",
-    "@ionic/core": "^8.0.1",
+    "@capacitor/android": "^6.2.0",
+    "@capacitor/app": "^6.0.2",
+    "@capacitor/browser": "^6.0.4",
+    "@capacitor/core": "^6.2.0",
+    "@capacitor/haptics": "^6.0.2",
+    "@capacitor/ios": "^6.2.0",
+    "@capacitor/keyboard": "^6.0.3",
+    "@capacitor/network": "^6.0.3",
+    "@capacitor/splash-screen": "^6.0.3",
+    "@capacitor/status-bar": "^6.0.2",
+    "@capacitor/text-zoom": "^6.0.3",
+    "@ionic/angular": "^8.4.1",
+    "@ionic/core": "^8.4.1",
     "@ionic/storage-angular": "^4.0.0",
-    "@maskito/angular": "^2.2.0",
-    "@maskito/core": "^2.2.0",
-    "@ngx-translate/core": "^15.0.0",
-    "@ngx-translate/http-loader": "^8.0.0",
-    "@types/jest": "^29.5.5",
+    "@maskito/angular": "^3.2.1",
+    "@maskito/core": "^3.2.1",
+    "@ngx-translate/core": "^16.0.4",
+    "@ngx-translate/http-loader": "^16.0.1",
+    "@types/jest": "^29.5.14",
     "cordova-plugin-network-information": "^3.0.0",
-    "cropperjs": "^1.5.13",
-    "date-fns": "^2.29.3",
-    "ionicons": "^6.0.3",
+    "cropperjs": "^1.6.2",
+    "date-fns": "^4.1.0",
+    "ionicons": "^7.4.0",
     "jest": "^29.7.0",
     "lodash": "^4.17.21",
     "rxdb": "^15.39.0",
     "rxjs": "^7.8.1",
     "save-dev": "^0.0.1-security",
-    "swiper": "^11.0.5",
-    "tslib": "^2.2.0",
+    "swiper": "^11.1.15",
+    "tslib": "^2.8.1",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.0.2",
-    "@angular-eslint/builder": "~17.3.0",
-    "@angular-eslint/eslint-plugin": "~17.3.0",
-    "@angular-eslint/eslint-plugin-template": "~17.3.0",
-    "@angular-eslint/template-parser": "~17.3.0",
-    "@angular/cli": "^19.0.2",
-    "@angular/compiler": "^19.0.1",
-    "@angular/compiler-cli": "^19.0.1",
-    "@angular/language-service": "^19.0.1",
-    "@capacitor/assets": "^3.0.4",
-    "@capacitor/cli": "^6.0.0",
-    "@ionic/angular-toolkit": "^6.1.0",
-    "@types/jasmine": "~3.6.0",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^17.0.29",
-    "@typescript-eslint/eslint-plugin": "^6.10.0",
-    "@typescript-eslint/parser": "6.10.0",
-    "eslint": "^7.6.0",
-    "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-jsdoc": "30.7.6",
-    "eslint-plugin-prefer-arrow": "1.2.2",
-    "jasmine-core": "~3.8.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.3.2",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "@angular-devkit/build-angular": "^19.0.6",
+    "@angular-eslint/builder": "~19.0.2",
+    "@angular-eslint/eslint-plugin": "~19.0.2",
+    "@angular-eslint/eslint-plugin-template": "~19.0.2",
+    "@angular-eslint/template-parser": "~19.0.2",
+    "@angular/cli": "^19.0.6",
+    "@angular/compiler": "^19.0.5",
+    "@angular/compiler-cli": "^19.0.5",
+    "@angular/language-service": "^19.0.5",
+    "@capacitor/assets": "^3.0.5",
+    "@capacitor/cli": "^6.2.0",
+    "@ionic/angular-toolkit": "^12.1.1",
+    "@types/jasmine": "~5.1.5",
+    "@types/jasminewd2": "~2.0.13",
+    "@types/node": "^22.10.2",
+    "@typescript-eslint/eslint-plugin": "^8.18.2",
+    "@typescript-eslint/parser": "8.18.2",
+    "eslint": "^9.17.0",
+    "eslint-plugin-import": "2.31.0",
+    "eslint-plugin-jsdoc": "50.6.1",
+    "eslint-plugin-prefer-arrow": "1.2.3",
+    "jasmine-core": "~5.5.0",
+    "jasmine-spec-reporter": "~7.0.0",
+    "karma": "~6.4.4",
+    "karma-chrome-launcher": "~3.2.0",
+    "karma-coverage": "~2.2.1",
+    "karma-coverage-istanbul-reporter": "~3.0.3",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "^2.1.0",
     "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
-    "typescript": "~5.5.4"
+    "ts-node": "~10.9.2",
+    "typescript": "~5.6.0"
   },
   "description": "An Ionic project"
 }
